platform/kubernetes/base/ingress/checkout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout
  namespace: northstar-dev
  labels:
    app.kubernetes.io/name: checkout
    app.kubernetes.io/part-of: northstar
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik

  rules:
    - host: checkout.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checkout
                port:
                  number: 8080
